--- a/wiki/LoadingFirmware.wiki
+++ b/wiki/LoadingFirmware.wiki
@@ -66,8 +66,11 @@ More info on the Time library can be found here: http://arduino.cc/playground/Co
 {{{
 #include <EEPROM.h>
 #include <avr/wdt.h>
+#include <avr/pgmspace.h>
 #include <pins_arduino.h>
 #include <Wire.h>
+#include <RTClib.h>
+#include <FlexiTimer2.h> // Required for RTC and Delay Timer
 #include <Time.h>
 #if defined(ARDUINO) && (ARDUINO >= 100)
 #include "Arduino.h"
