--- a/wiki/30A_OpenEVSE.wiki
+++ b/wiki/30A_OpenEVSE.wiki
@@ -118,7 +118,9 @@ http://open-evse.googlecode.com/files/OpenEVSE_Single_DPST_relay.jpg
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8365_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8365_medium.jpg]
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8366_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8366_medium.jpg]
 
-==2 - 12vDC Relays SPST==
-[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8622_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8622_1024x1024.jpg]
+==Dual Relay 12vDC Relays SPST==
+http://open-evse.googlecode.com/files/OpenEVSE_Dual_SPST_relay.jpg
+
+[http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8622_medium.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8622_1024x1024.jpg]
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8623_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8623_medium.jpg]
 [http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8633_1024x1024.jpg http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8633_medium.jpg]
