--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -100,7 +100,7 @@ Lastly, connect the LCD up via the I2C cable. Unlike OpenEVSE, there is no suppo
 
 You will need:
 
-  # A circuit board from OSHPark. Currently, the 1.4 version board is recommended.
+  # A circuit board from OSHPark. Currently, the 1.6 version board is recommended.
   # An OpenEVSE RGB LCD backpack from the OpenEVSE store
   # The contents of the PCB BOM from DigiKey
   # The contents of the chassis BOM from DigiKey
@@ -209,8 +209,9 @@ And in the middle of the board, the ISP.
   * 1.3 - Corrected FTDI connector, reverted to 6 pin DC-DC pads for CUI modules. Switch from 2N2222 transistors to 2N4401 for relay drivers. Added outgoing proximity circuitry. This version contained a major error causing the +5 v supply to be shorted to ground.
   * 1.4 - Corrected short circuit in v1.3.
   * 1.5 - Added bypass cap to CT anchor - improves low current ammeter accuracy.
+  * 1.6 - Rearranged the connectors. Car A is now on the left side, car B on the right, and the inlet is on the bottom.
 
-Currently, 1.4 is the recommended version (1.5 has not yet been validated).
+Currently, 1.6 is the recommended version.
 
 = Links =
 
