--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -44,15 +44,22 @@ The board has the following interface points:
   * 2 three pin terminals - one for each car that has the outgoing pilot and proximity signals, plus a ground connection
   * 1 three pin terminal that comes from the inlet, with ground, pilot and proximity
   * 1 two pin terminal that brings 12 VDC from an external power supply
-  * 1 two pin terminal that connects to an external power switch. This switch switches the inlet pilot resistance from state B to state C when closed. Optionally, you can simply jumper the terminal if you would rather.
-  * 1 4 pin I2C header for the LCD
+  * 1 two pin terminal that connects to an external power switch. This switch switches the inlet pilot resistance from state B to state C when closed. Optionally, you can simply jumper the terminal if you would rather. The v2.0 hardware includes a transistor that will hold the inlet in state C whenever at least one car is powered up.
+  * 1 4 pin I2C header for the LCD (not present on the v2.0 board with the on-board display).
   * 1 2x3 pin ISP socket for programming
   * 1 6 pin FTDI header for serial I/O (for debugging, programming or future expansion)
 
-There are 3 things on the board that require some attention:
-  * R8 is a 2.7k resistor that runs between proximity and ground. Some (most? all?) J1772 inlets come with a 2.7k resistor installed between proximity and ground. If yours does, then do not install R8.
+There are some things on the board that require some attention:
   * R14 and R17 are burden resistors for the CT coils. These need to be chosen based on the CT you're going to use and the maximum outlet current rating for your Hydra. For my prototype, the CTs I've selected have a Te of 1018 and the design current for the Hydra will be 30A. For that configuration, a 56 ohm resistor is appropriate. You'll also find a #define in the source code for the Hydra that you will need to adjust in concert with this. Customizing the burden resistor allows you to maximize the accuracy of the ammeter readings for each car.
+
+For the v1.6 board:
+  * R8 is a 2.7k resistor that runs between proximity and ground. Some (most? all?) J1772 inlets come with a 2.7k resistor installed between proximity and ground. If yours does, then do not install R8.
   * If you do not plan on using serial programming and a bootloader, you may wish to leave out C11. Placing C11 will allow DTR on the serial port to reset the controller as a prelude to serial programming. If you plan on using serial programming exclusively, then you can leave out the ISP connector.
+
+For the v2.0 board:
+  * The PROX_RES jumper enables a 2.7k resistor between the inlet proximity pin and ground. If your inlet lacks a 2.7k resistor between proximity and ground, then close this jumper.
+  * The DTR_RESET jumper will allow the serial port DTR signal to reset the controller. If you're going to use an FTDI cable with an Arduino bootloader to upload sketches, then you should close this jumper. If you're going to use, for example, bluetooth modules on this port, then you probably want to leave it open.
+  * The BL_COM_SEL 2 way jumper selects the polarity of the backlight common pin. If your LCD module is common anode, then pads 2 and 3 should be closed. If your LCD module is common cathode, then pads 1 and 2 should be closed. DO NOT close all three pads - that would short out the 5 volt power supply. Note that if you use a common cathode backlight, you will need to compile the firmware with that set.
 
 The software is hosted on GitHub at https://github.com/nsayer/hydra
 
@@ -60,7 +67,7 @@ You have two choices on programming the Hydra. First, you can program using an A
 
 Alternatively, if you do not have an AVR ISP programmer, but do have an FTDI style serial cable, you can use an ATMega chip with a standard Arduino Uno bootloader installed. Connect the cable up to the FTDI port on the board, select the Arduino Uno in the 'boards' menu, select the correct serial port in the serial menu and upload the sketch as usual.
 
-Of course, your ATMega chip must already have a bootloader and be fused as appropriate for an Uno. If you buy a "raw" ATMega chip, you'll still need to fuse it and load a bootloader with an ISP programmer.
+Of course, your ATMega chip must already have a bootloader and be fused as appropriate for an Uno. If you buy a "raw" ATMega chip, you'll still need to fuse it and load a bootloader with an ISP programmer. For v2.0 hardware, there's no opportunity to swap out the controller easily, so you (or someone) must use the ISP pins to install the bootloader at least once before FTDI programming will succeed.
 
 = Safety =
 
@@ -101,8 +108,8 @@ Lastly, connect the LCD up via the I2C cable. Unlike OpenEVSE, there is no suppo
 You will need:
 
   # A circuit board from OSHPark. Currently, the 1.6 version board is recommended.
-  # An OpenEVSE RGB LCD backpack from the OpenEVSE store
-  # The contents of the PCB BOM from DigiKey
+  # An OpenEVSE RGB LCD backpack from the OpenEVSE store (not needed for a v2.0 Hydra board)
+  # The contents of the PCB BOM from DigiKey (not needed for a v2.0 Hydra quick kit)
   # The contents of the chassis BOM from DigiKey
   # A J1772 inlet
   # 2 J1772 cable/plug assemblies
@@ -121,15 +128,46 @@ If you change the values of R14 or R17 and/or the CT, then you must change the C
 
 Divide Rb by Te to get volts per amp. Divide that value by (5/1024) to get units per amp. Divide 1000 by units per amp to get milliamps per unit, which is the value of CURRENT_SCALE_FACTOR.
 
+= Assembling the v2.0 "quick kit" =
+
+The version 2.0 Hydra board comes with all the surface mount components installed and the latest firmware preloaded. What remains is the installation of all of the through-hole components. You should find:
+
+  * The board
+  * An RGB backlit 2x16 character LCD module
+  * A 1x18 .1" SIP header
+  * A 1x6 .1" SIP header
+  * A 1x3 .1" SIP header
+  * A shrouded 2x3 DIP header
+  * A 20k trimmer potentiometer
+  * 3 3 point screw terminals
+  * 6 2 point screw terminals
+  * 4 2-64 1/2" bolts
+  * 4 #4 1/4" standoffs
+  * 4 2-64 nuts
+
+Start by installing all of the screw terminals. All of them should be installed on the *opposite* side of the board as the surface mount components.
+
+Next, install the shrouded DIP header. Pin 1 is the square one - it should be the same side as the key slot on the shrouded header. Again, this should be on the *opposite* side of the board from the SMD components.
+
+Install the 3 pin SIP header for the SELECT switch.
+
+Install the 6 pin FTDI header.
+
+Install the trimmer pot.
+
+Lastly, install the LCD. To do so, first install the 18 pin SIP header, but do not solder it. Lay the LCD module on top with the SIP header mating with the interface on the module. Again, do not solder yet. Thread the 2-64 bolts through the for holes in the corner of the LCD. Place a standoff in each corner between the logic board and the LCD module and push the bolt through and thread a nut on the bottom. Tighten (but do not over tighten) each nut. When the module is physically secured in place, solder the SIP header both on the LCD module and on the logic board.
+
+Temporarily connect a 12 volt power supply to the power terminals and adjust the contrast knob so that the text looks its best.
+
 = Chassis assembly instructions =
 
 You can, of course, build your Hydra however you like, but the formula that works best for me goes something like this:
 
-On the WC-40, pick one of the short sides to be the "top." In the middle of this side, drill a 5/8" hole for the mode button. On the opposite short side, drill a 1 5/8" hole 1 3/8" down from the upper edge of the box (not counting the lid). Insert and center the inlet, then mark the four 1/8" holes in the corners. Once drilled, use 1/2" 6-32 bolts, nuts and lock washers to install the inlet. On the two long sides, drill a 1 1/8" hole centered on the lower "half" of the side (that is, between the short side with the inlet hole and the "rib" that runs up from the back at the center of the long side). Those two holes will be for the CG-16 cable glands. Use a Dremel and knock off the two panel supports nearest the button hole, but NOT the ones with the threaded inserts. Those two panel supports will eventually collide with the standoffs for the LCD panel we are going to install.
+On the WC-40, pick one of the short sides to be the "top." In the middle of this side, drill a 5/8" hole for the mode button. On the opposite short side, drill a 1 5/8" hole 1 3/8" down from the upper edge of the box (not counting the lid). Insert and center the inlet, then mark the four 1/8" holes in the corners. Once drilled, use 1/2" 6-32 bolts, nuts and lock washers to install the inlet. On the two long sides, drill a 1 1/8" hole centered on the lower "half" of the side (that is, between the short side with the inlet hole and the "rib" that runs up from the back at the center of the long side). Those two holes will be for the CG-16 cable glands. If you're using v1.6, use a Dremel and knock off the two panel supports nearest the button hole, but NOT the ones with the threaded inserts. Those two panel supports will eventually collide with the standoffs for the LCD panel we are going to install.
 
-On the WX-42 panel, use the LCD and main board as templates to mark the mounting holes. You want the LCD near, but not at, the top of the panel, and the main board 1/4" below it. A half inch below the bottom of the board, center the two relays, and a half inch below the bottom of the relays, the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board.
+On the WX-42 panel, use the LCD and main board as templates to mark the mounting holes. If you're using v1.6, you want the LCD near, but not at, the top of the panel, and the main board 1/4" below it. If you're using v2.0, then you just want to center the board as best as you can. A half inch below the bottom of the board, center the two relays, and a half inch below the bottom of the relays, the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board.
 
-Use 4 2" 4-40 M-F nylon hex standoffs for the display and 4 1-3/8" metal 4-40 M-F hex standoffs for the main board. Use 2 1-3/4" 4-40 bolts, nuts and lock washers to secure the power supply. Be sure to install the wires for the power supply *before* installing the main board - the power supply will be inaccessible later. Use a 4-40 nut and lock washer to secure each standoff, then use a 1/4" 4-40 bolt to attach the LCD and main board. Don't forget the spacers on each corner between the LCD and its backpack board. Before attaching the LCD, you'll probably want to attach the i2c and button cables.
+For v1.6, Use 4 2" 4-40 M-F nylon hex standoffs for the display and 4 1-3/8" metal 4-40 M-F hex standoffs for the main board. For v2.0, use 4 2" 4-40 M-F next standoffs. Use 2 1-3/4" 4-40 bolts, nuts and lock washers to secure the power supply. Be sure to install the wires for the power supply *before* installing the main board - the power supply will be inaccessible later. Use a 4-40 nut and lock washer to secure each standoff, then use a 1/4" 4-40 bolt to attach the LCD (if applicable) and main board. Don't forget the spacers on each corner between the LCD and its backpack board. Before attaching the LCD, you'll probably want to attach the i2c and button cables.
 
 Use 1/2" 6-32 bolts, nuts and lock washers to secure the relays. Be sure to orient the relays so that the coil tabs are nearest the logic board.
 
@@ -178,6 +216,8 @@ The relay outputs are fed from fairly standard open collector circuits (R2 & Q1;
 == Controller ==
 
 The controller is fused for external crystal timing, and a 16 MHz crystal is chosen to be compatible with the Arduino IDE. The ISP programming pins (including /RESET) are connected to an ISP header. Those pins are not shared with other functions. The i2c bus is brought out to a 4 pin header for an LCD and the async serial pins are brought out to an FTDI connector. DTR on the FTDI connector is connected to /RESET through a capacitor so that DTR transitions can reset the CPU. If you load an Arduino style bootloader, then programming can be done with an FTDI cable instead of an ISP cable. Alternatively, since 5 volts is supplied to the FTDI cable, it can power external serially connected devices.
+
+Version 2.0 of the Hydra board includes an MCP23017 i2c GPIO chip to drive the on-board LCD. The connections from the chip to the LCD are the same as the OpenEVSE backpack display and the AdaFruit RGB LCD shield, except that only the SELECT button is actually brought out to a connector.
 
 The inlet's AC power is connected to an off-board AC-to-DC converter module which outputs 12 volts. DC-DC converter DC2 converts this into 5 volts for the controller and the rest of the logic system.
 
