Edited wiki page Hydra through web user interface.

--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -83,9 +83,11 @@ The two car relays are DPST relays with 12vdc coils rated for whatever your outl
 
 In some (most?) cases, the J1772 inlet you get will be higher rated than your plugs and cables. The software is capable of limiting the inlet current separately, but in order to take advantage of this, you must insure that your relays are wired in a "star" pattern rather than daisy-chained. In a daisy-chain, the full current of the entire system will flow through the first component's cables, limiting the design current to that capacity. If you connect each relay's supply leads together to the inlet supply at the same point, then the inlet current is allowed to be higher.
 
-For each relay, designate a "line" side and a "load" side. On the line side, run a wire (for 30A, use 10 gauge) from each terminal of the relay to one of the two inlet hot cables. I used (large) wire nuts to connect the three wires for each phase together.
+The best way to connect the inlet up with the two relays and the DC power supply is with a Cooper Bussman 11725-2 power distribution module. It has two screw terminals that can accommodate 2-14 gauge copper wire for accepting the inlet wiring, and has 8 1/4" QD terminals (four for each hot wire) for connecting to the load. It's rated at 70A, so it's plenty beefy enough.
 
-You also need to get "line" power into the power supply. It can use 22 gauge wire. You can add those wires into the wire nut forest.
+For each relay, designate a "line" side and a "load" side. On the line side, run a wire (for 30A, use 10 gauge) from each terminal of the relay to one of the two "load" side groups of QD connectors on the power distribution bus module.
+
+You also need to get "line" power into the power supply. It can use 22 gauge wire. Use crimp-on QD terminals and plug them into the power distribution bus as well.
 
 On the load side of each relay, connect up the hot wires of one of the J1772 cables. Run one of the hot lines through a CT coil before connecting it to the relay. Unlike OpenEVSE, you run only one of the lines through the coil, not both. It doesn't matter which one you pick.
 
@@ -184,13 +186,23 @@ You can, of course, build your Hydra however you like, but the formula that work
 
 On the WC-40, pick one of the short sides to be the "top." In the middle of this side, drill a 5/8" hole for the mode button. On the opposite short side, drill a 1 5/8" hole 1 3/8" down from the upper edge of the box (not counting the lid). Insert and center the inlet, then mark the four 1/8" holes in the corners. Once drilled, use 1/2" 6-32 bolts, nuts and lock washers to install the inlet. On the two long sides, drill a 1 1/8" hole centered on the lower "half" of the side (that is, between the short side with the inlet hole and the "rib" that runs up from the back at the center of the long side). Those two holes will be for the CG-16 cable glands. If you're using v1.6, use a Dremel and knock off the two panel supports nearest the button hole, but NOT the ones with the threaded inserts. Those two panel supports will eventually collide with the standoffs for the LCD panel we are going to install.
 
-On the WX-42 panel, use the LCD and main board as templates to mark the mounting holes. If you're using v1.6, you want the LCD near, but not at, the top of the panel, and the main board 1/4" below it. If you're using v2.0, then you just want to center the board as best as you can. A half inch below the bottom of the board, center the two relays, and a half inch below the bottom of the relays, the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board.
+On the WX-42 panel, use the LCD and main board as templates to mark the mounting holes. If you're using v1.6, you want the LCD near, but not at, the top of the panel, and the main board 1/4" below it. If you're using v2.0, then you just want to center the board as best as you can. A half inch below the bottom of the board, center the two relays, and in the remaining space, mark the mounting hole for the power distribution bus module and the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board.
 
-For v1.6, Use 4 2" 4-40 M-F nylon hex standoffs for the display and 4 1-3/8" metal 4-40 M-F hex standoffs for the main board. For v2.0, use 4 2" 4-40 M-F next standoffs. Use 2 1-3/4" 4-40 bolts, nuts and lock washers to secure the power supply. Be sure to install the wires for the power supply *before* installing the main board - the power supply will be inaccessible later. Use a 4-40 nut and lock washer to secure each standoff, then use a 1/4" 4-40 bolt to attach the LCD (if applicable) and main board. Don't forget the spacers on each corner between the LCD and its backpack board. Before attaching the LCD, you'll probably want to attach the i2c and button cables.
+For v1.6, Use 4 2" 4-40 M-F nylon hex standoffs for the display and 4 1-3/8" metal 4-40 M-F hex standoffs for the main board. For v2.0, use 4 2" 4-40 M-F next standoffs.
 
 Use 1/2" 6-32 bolts, nuts and lock washers to secure the relays. Be sure to orient the relays so that the coil tabs are nearest the logic board.
 
-Cut four short (around 4 inches or so) #10 wires - two red, two black. Attach a QD female connector to one end of each. Connect a red and a black to each relay on the "line" side. Gather each red wire, the red wire from the inlet and the red wire coming from the power supply and twist on a large wire nut. Do the same for the blacks. Run the proximity and pilot wire from the inlet to the logic board, Run a small wire from the inlet ground connector on the board to the ground bus. Run the inlet ground wire to the ground bus as well.
+Use 1/2" 6-32 bolts, nuts and lock washers to secure the power distribution bus module. Use the self-tapping screw supplied with the ground bus to secure it.
+
+Cut the inlet hot and ground wires to length and install the two hot wires in each side of the power distribution bus module and the ground wire into the ground bus.
+
+Cut four short (around 4 inches or so) #10 wires - two red, two black. Attach a QD female connector to each end of each wire. Connect a red and a black to each relay on the "line" side. Connect the other end of each red wire to the "red" side of the power distribution bus module. Connect the free end of the black wires to the other side. Cut a 22 gauge red and black wire approximately 8 inches long. Attach a QD terminal to one end of each and twist them together in a loose braid. Connect the QD terminals to the power distribution bus module, matching the colors of the wires already there. Attach the other ends to the AC inputs of the power supply module (make *sure* you are connecting them to the AC side!). Cut two more red and black 22 gauge wires approximately 4 inches long and make another braid. Connect one end of each wire to the DC outputs of the power supply, matching red to positive, black to negative. Connect the other end of each to the power input terminal block on the main board, matching black to ground and red to the positive terminal.
+
+Use 2 1-3/4" 4-40 bolts, nuts and lock washers to secure the power supply. Be sure to install the wires for the power supply *before* installing the main board - the power supply will be inaccessible later. Use a 4-40 nut and lock washer to secure each standoff and use a 1/4" 4-40 bolt to attach the main board.
+
+For v1.6, use four 1/2" 4-40 bolts to attach the LCD to its standoffs. Don't forget the spacers on each corner between the LCD and its backpack board. Before attaching the LCD, you'll probably want to attach the i2c and button cables.
+
+Run the proximity and pilot wire from the inlet to the logic board, Run a small wire from the inlet ground connector on the board to the ground bus.
 
 Next, install each cable/plug set. Attach QD female connectors on the red and black lines. Pass one of the hot lines of each plug through the respective current transformer, and then connect each hot line to one of the two relays on the "load" side. Connect the ground cable to the ground bus. Connect the pilot line and the proximity line (if available) to the respective connectors on the main board.
 
